--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ p{
 }
 
 #tdtemp{
-    padding-left: 15px;
+    padding-left: 18px;
 }
 
 #temp{
@@ -28,6 +28,12 @@ p{
 }
 
 #linfo{
+    padding-left: 5px;
     font-size: 14px;
+}
+
+#ltextinfo{
+    margin-bottom: 1px;
+    margin-top: 1px;
     color: #9e9e9e !important;
 }
