CSS change with class and JS little change

--- a/main.css
+++ b/main.css
@@ -47,6 +47,11 @@ p{
     padding-left: 200px;
 }
 
-#C{
+#C, #F{
     margin-top: 5px;
+}
+
+.unotsel{
+    cursor: pointer;
+    color: #9e9e9e;
 }
