--- a/main.css
+++ b/main.css
@@ -60,3 +60,12 @@ p{
 .dayshort{
     text-align: center;
 }
+
+.middle{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
