--- a/main.css
+++ b/main.css
@@ -33,10 +33,16 @@ p{
     font-size: 14px;
 }
 
-#ltextinfo{
+.ltextinfo{
     margin-bottom: 1px;
     margin-top: 1px;
     color: #9e9e9e !important;
+}
+
+.textforecast{
+    text-align: center;
+    font-size: 14px;
+    margin-top: 5px;
 }
 
 #season{
@@ -59,6 +65,7 @@ p{
 
 .dayshort{
     text-align: center;
+    margin-top: 8px;
 }
 
 .middle{
